# AI-TTS-Donations

./: .all-contributorsrc  .gitignore  .kodiak.toml  .pre-commit-config.yaml  .prettierrc  .replit  .yarnrc.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY_POLICY.md  README.md  SECURITY.md  bot.py  crowdin.yaml  index.html  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  script.js  setup.cfg  style.css  tox.ini  turbo.json  ui.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: changelog.yml  codacy.yml  codeql-analysis.yml  community.yml  contributors.yml  lint.yml  processor_tests.yml  stale.yml  tests.yml
API/: fakeyou.py  tiktok.py  uberduck.py
apps/backend/: .gitignore  README.md  nodemon.json  package.json  tsconfig.json
apps/docs/: README.md  docusaurus.config.js  package.json
apps/frontend/: .eslintrc.json  .gitignore  README.md  global.d.ts  next.config.js  next.config.wizardcopy.ts  package.json  pnpm-lock.yaml  sentry.client.config.js  sentry.properties  sentry.server.config.js  tailwind.config.js  tsconfig.json
apps/prisma/: .gitignore  index.ts  package.json  requirements.txt  tsconfig.json  update_schema.sh
apps/processor/: .gitignore  README.md  index.py  main.py  package.json  tests.py  (+1 more)
overlay/: style.css
playsounds/: README.md
scripts/: install-dependencies.bat  install-git.bat  install-python.bat
tests/: bot_test.py
voice_files/: README.md
(+115 files in other folders)
