[metadata]
name = ai-tts-donations


[options]
packages =
    ai_tts_donations
install_requires =
    httpx==1.0.0b0
    pedalboard==0.4.3
    python_dotenv==0.19.2
    rich==11.2.0
    SoundFile==0.10.3.post1
    twitchAPI==2.5.3
    #git+https://github.com/jps-aldridge/py-simple-audio@master#egg=simpleaudio
python_requires = >=3.8
package_dir =
    =src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24
    pytest-dotenv>=0.5.2

[options.package_data]
ai_tts_donations = py.typed

[flake8]
max-line-length = 100
